Coaster_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
