Coaster_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coaster-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /coasters/*
          backend:
            serviceName: c-c-service
            servicePort: 8080
        - path: /mgr/*
          backend:
            serviceName: c-m-service
            servicePort: 8080
